Fix the disabled button styling in dark mode

--- a/css/simplemodal.css
+++ b/css/simplemodal.css
@@ -26,20 +26,26 @@
 /* Vars */
 :root {
     --text: #222;
+    --gray: #999;
     --content-bg: #fff;
     --content-border: #c5c8cc;
     --panel-bg: #f0f0f2;
+    --form-text-disabled: #bbb;
     --form-button-hover: #f6f6f6;
+    --form-button-disabled: #e9e9e9;
     --loader-icon: url("../images/loader.svg");
 }
 
 html[data-color-scheme="dark"] {
     color-scheme: dark;
     --text: #ddd;
+    --gray: #666;
     --content-bg: #1b1d21;
     --content-border: #4e5156;
     --panel-bg: #292c32;
+    --form-text-disabled: #666;
     --form-button-hover: #383a42;
+    --form-button-disabled: #26272c;
     --loader-icon: url("../images/loader-dark.svg");
 }
 
@@ -202,9 +208,9 @@ html[data-color-scheme="dark"] {
 
 .simple-modal .simple-modal-footer a.btn-disabled {
     cursor: not-allowed;
-    color: #bbb;
-    background-color: #f9f9f9;
-    border-color: #c8c8c8;
+    color: var(--gray);
+    background-color: var(--form-button-disabled) !important;
+    border-color: var(--form-border-disabled);
 }
 
 /* Draggable style */
